2014-03-27  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Update.
	* src/procenv.c:
	  - get_arch(): Update for Sparc 64-bit (V9).
	  - show_capabilities_linux(): Move CAP_LAST_CAP out of the list and use
	    it as a count to avoid it being confused for an actual capability.

2014-03-20  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Add reference to personality(2).
	* src/procenv.c: --misc: Add Linux personality type and flags.
	* src/procenv.h: Bump PROCENV_FORMAT_VERSION to 6 for format change.

2014-03-17  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Add reference to libcap(3).
	* procenv.spec.in: Buid-depend on libcap-devel.
	* README: Update.

2014-03-14  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_mounts_linux(): Don't quote unknown canonical name.
	  - get_canonical(): Return value denoting if name was known.
	  - show_capabilities_linux():
	  - Use cap_get_bound() rather than prctl().
	  - Memory leak fix.
	* src/procenv.h: _show_capability(): 
	  - Use cap_get_bound() rather than prctl().
	  - Add "supported".

2014-03-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Corrected formatting.
	* TODO: Updates.
	* configure.ac: Link to libcap if available.
	* src/procenv.c:
	  - get_capability_by_flag(): New function to query a capability value
	    for a specified capability type.
	  - show_capabilities_linux():
	    - Make use of libcap calls.
	    - Add missing CAP_BLOCK_SUSPEND.
	    - Show "unknown" capabilities if detected (capabilities that the
	      running kernel supports which procenv doesn't know about).
	* src/procenv.h:
	  - PROCENV_FORMAT_VERSION: bumped to version 5 for capabilities output
	    format change.
	  - show_capability(): Now calls _show_capability().
	  - _show_capability(): Reworking of show_capability() macro that uses
	    libcap calls and works for unknowns too.

2014-01-31  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Build procenv.spec from .in file to auto-update