@@ -1,3 +1,12 @@
+2014-05-03  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - Guard extended interfaces flags (IFF_*) since as of
+	    kernel 3.15 they have been removed (LP: #1324256).
+	  - show_all_groups(): Fixed possible memory leak - thanks Coverity.
+	  - show_uname(): Added asserts.
+	* src/tests/check_all_args.in: Temporary work-around for lp:1325494.
+
 2014-03-27  James Hunt  <james.hunt@ubuntu.com>
 
 	* TODO: Update.
